2011-09-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Create instances ourselves instead relying on
	gnustep-base.
	* Source/GNUmakefile:
	* Source/CFBase.c:
	* Source/CFBase.m: Implement a true CFAllocator type.  It is no longer
	compatible with a NSZone.  This change also eliminates the objc dependency
	so the file is now pure C.
	* Source/CFArray.m:
	* Source/CFNumber.m:
	* Source/CFStream.m:
	* Source/CFURL.m:
	* Source/CFDictionary.m:
	* Source/CFData.m: Do not use CFAllocators as NSZones.
	* Source/NSCFType.h:
	* Source/NSCFType.m: NSCFType no longer conforms to NSCopying.  I'm not
	sure it ever had to.
	* Source/CFString.c: Fix bug in CFStringCreateMutable().

2011-09-19 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Update to reflect latest changes in gnustep-base.
	* Source/CFError.m:
	* Source/Identifiers.m: Moved definition of identifiers.
	* Headers/CoreFoundation/CFString.h: Do not define CFSTR() to @""
	in ObjC source files.

2011-08-28 Matt Rice <ratmice@gmail.com>

	* Source/objc_interface.h: Remove referene to preface.h
	add runtime.h.
	(CF_IS_OBJC): Add cast to avoid warning.
	* Source/CFUUID.c: Replace BOOL/YES/NO with Boolean/true/false.
	* Source/CFBase.m (CFNullInitialize): Avoid +initialize.

2011-07-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFDate.c:
	* Source/CFCalendar.m: Modify absolute time function to not require
	ucal support and move back into CFDate.c.

2011-07-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Fixed bug in CFTimeZoneCreateWithName ().
	* Source/CFRuntime.m: Fixed bug when setting isa.

2011-07-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Complete CFTimeZoneCreateWithName().
	* Source/CFString.c: Fix a few bugs.
	* Source/CFStringUtilities.c: Fix compare bug.

2011-07-15 10:57  David Chisnall <theraven@gna.org>

	* libs/corebase/trunk/Source/CFBundle.m,
	* libs/corebase/trunk/Source/GNUmakefile: Define RTLD_DEFAULT on